--- a/detail/ID_protectedData.html
+++ b/detail/ID_protectedData.html
@@ -8,7 +8,7 @@
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>类的非常量数据成员不应定义为 protected - C/C++ 安全规则</title>
+  <title>类的非常量数据成员不应为 protected - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,7 +27,7 @@
 </nav>
 <article>
 <header>
-  <h1>类的非常量数据成员不应定义为 protected</h1>
+  <h1>类的非常量数据成员不应为 protected</h1>
   <div id="subtitle">
     <div id="subtitle-id">5.1.2 ID_protectedData</div>
     <div id="subtitle-tags">
