--- a/detail/ID_do_suspiciousContinue.html
+++ b/detail/ID_do_suspiciousContinue.html
@@ -29,9 +29,9 @@
 <header>
   <h1>注意 do-while(0) 中可疑的 continue 语句</h1>
   <div id="subtitle">
-    <div id="subtitle-id">9.4.1 ID_do_suspiciousContinue</div>
+    <div id="subtitle-id">9.4.4 ID_do_suspiciousContinue</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#control.do">目录</a> › <a class="rule-toc-link" href="./ID_do_emptyBlock.html">next</a> › <a class="rule-toc-link" href="./ID_while_brace.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#control.do">目录</a> › <a class="rule-toc-link" href="./ID_switch_semicolon.html">next</a> › <a class="rule-toc-link" href="./ID_do_brace.html">previous</a>
     </div>
   </div>
   <hr class="solid-hr"/>
