--- a/detail/ID_while_brace.html
+++ b/detail/ID_while_brace.html
@@ -31,7 +31,7 @@
   <div id="subtitle">
     <div id="subtitle-id">9.3.6 ID_while_brace</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#control.while">目录</a> › <a class="rule-toc-link" href="./ID_do_suspiciousContinue.html">next</a> › <a class="rule-toc-link" href="./ID_while_emptyBlock.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#control.while">目录</a> › <a class="rule-toc-link" href="./ID_do_deprecated.html">next</a> › <a class="rule-toc-link" href="./ID_while_emptyBlock.html">previous</a>
     </div>
   </div>
   <hr class="solid-hr"/>
